--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="body">
 <div class="login-container">
   <h2>Login</h2>
   <form (ngSubmit)="onSubmit()">
@@ -23,4 +24,5 @@
 
     <button type="submit">Login</button>
   </form>
+</div>
 </div>
