--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -1,11 +1,21 @@
+.body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 370px;
+  background-image: url('https://img.freepik.com/premium-photo/gym-stuff_1034910-20805.jpg');
+  background-size: cover; /* Ensures the image covers the viewport */
+  background-position:0%; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents the image from repeating */
+  background-attachment: fixed; /* Makes the background image fixed during scrolling */
+}
 .signup-container {
     max-width: 400px;
-    margin: 50px auto;
+    margin: -300px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     text-align: center;
-    background-color: #fff; /* Optional: Add background color */
+    background-color: #e2e2e2; /* Optional: Add background color */
   }
   
   .signup-container h2 {
@@ -22,7 +32,7 @@
   
   button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #0ecd17;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -31,6 +41,6 @@
   }
   
   button:hover {
-    background-color: #0056b3; /* Add hover effect */
+    background-color: #1ccc33; /* Add hover effect */
   }
   
