--- a/src/app/features/gym/gym.component.scss
+++ b/src/app/features/gym/gym.component.scss
@@ -14,7 +14,7 @@ body {
 /* Banner Section */
 .banner {
     text-align: center;
-    background-color: green;
+    background-color: #ff5722; /* Gym-themed orange color */
     color: white;
     padding: 30px 15px;
     border-radius: 10px;
