--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -135,11 +135,9 @@
                                         src="https://www.shutterstock.com/image-vector/vitamin-icon-logo-modern-line-260nw-481654813.jpg"
                                         alt="Image" height="160" style="border-radius: 12px;"></li>
                                 <li class="font-bold my-5 text-xl text-900 hidden lg:block">Vitamines</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Athletic</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Boots</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Sneakers</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Flats</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Outdoor</li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/vitamines/creatine" class="text-700 hover:text-900">Creatine</a></li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/vitamines/bcaa" class="text-700 hover:text-900">BCAA</a></li>
+                                
                             </ul>
                         </div>
                         <div class="col-12 md:col-6 xl:col-3">
@@ -150,11 +148,9 @@
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2WEnCzzgfUAxn4iv5LbtE2yXEvVy4uGdcONdVS1-XR_6fEt2gq6jtKCur3xyyO81_rM4&usqp=CAU"
                                         alt="Image" height="160" style="border-radius: 12px;"></li>
                                 <li class="font-bold my-5 text-xl text-900 hidden lg:block">Pré-Workout</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Handbags</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Gloves</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Belts</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Hats</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Earmuffs</li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/prework/cafeine" class="text-700 hover:text-900">Cafeine</a></li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/prework/carnitine" class="text-700 hover:text-900">Carnitine</a></li>
+                                
                             </ul>
                         </div>
                         <div class="col-12 md:col-6 xl:col-3">
@@ -165,12 +161,9 @@
                                         src="https://www.shutterstock.com/shutterstock/photos/1622737948/display_1500/stock-vector-fruit-salad-logo-design-vector-1622737948.jpg"
                                         alt="Image" height="160" style="border-radius: 12px;"></li>
                                 <li class="font-bold my-5 text-xl text-900 hidden lg:block">Salads & Superaliments Vegans</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Anklets</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Bracelets</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Earrings</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Necklaces</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Rings</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Wedding</li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/salads/salads" class="text-700 hover:text-900">Salads</a></li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/salads/superaliments" class="text-700 hover:text-900">Superaliments</a></li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -189,66 +182,33 @@
                     <div class="grid flex-wrap">
                         <div class="col-12 md:col-6 xl:col-3">
                             <a pStyleClass="@next" enterClass="hidden" leaveToClass="hidden"
-                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Men</a>
+                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Sporting goods</a>
                             <ul class="list-none py-0 pr-0 lg:pl-0 pl-5 m-0 text-700 hidden lg:block">
                                 <li class="hidden lg:block"><img
-                                        src="https://static.vecteezy.com/system/resources/thumbnails/047/589/578/small/sportswear-logo-sign-outline-vector.jpg"
+                                        src="https://logowik.com/content/uploads/images/football706.logowik.com.webp"
                                         alt="Image" height="160" style="border-radius: 12px;"></li>
-                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Men</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Dresses</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Jeans</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Pants</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Skirts</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Sweaters</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Blouses</li>
+                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Sporting goods</li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/equipments/football" class="text-700 hover:text-900">Football</a></li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/equipments/basketball" class="text-700 hover:text-900">Basketball</a></li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/equipments/tennis" class="text-700 hover:text-900">Tennis</a></li>
+                                
+                                
+                                
                             </ul>
                         </div>
                         <div class="col-12 md:col-6 xl:col-3">
                             <a pStyleClass="@next" enterClass="hidden" leaveToClass="hidden"
-                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Women</a>
+                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Sporting equipments </a>
                             <ul class="list-none py-0 pr-0 lg:pl-0 pl-5 m-0 text-700 hidden lg:block">
                                 <li class="hidden lg:block"><img
-                                        src="https://www.shutterstock.com/image-vector/sport-wear-icon-thin-line-600w-2273930403.jpg"
+                                        src="https://media.istockphoto.com/id/1159989622/vector/logo-barbell-cross-with-kettlebell-plate-shoe-and-muscled-arm-icons.jpg?s=612x612&w=0&k=20&c=UktGB4bqKdhiqnYJC-tpWpKAfrDcciemsswJmWIm0xU="
                                         alt="Image" height="160" style="border-radius: 12px;"></li>
-                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Women</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Athletic</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Boots</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Sneakers</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Flats</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Outdoor</li>
+                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Sporting equipments </li>
+                                <li class="mb-3 cursor-pointer hover:text-900"><a routerLink="/equipments/gym" class="text-700 hover:text-900">Gym equipments </a></li>
+                               
                             </ul>
                         </div>
-                        <div class="col-12 md:col-6 xl:col-3">
-                            <a pStyleClass="@next" enterClass="hidden" leaveToClass="hidden"
-                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Shoes</a>
-                            <ul class="list-none py-0 pr-0 lg:pl-0 pl-5 m-0 text-700 hidden lg:block">
-                                <li class="hidden lg:block"><img
-                                        src="https://www.shutterstock.com/image-vector/running-shoes-icon-line-style-600nw-1615528858.jpg"
-                                        alt="Image" height="160" style="border-radius: 12px;"></li>
-                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Shoes</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Handbags</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Gloves</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Belts</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Hats</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Earmuffs</li>
-                            </ul>
-                        </div>
-                        <div class="col-12 md:col-6 xl:col-3">
-                            <a pStyleClass="@next" enterClass="hidden" leaveToClass="hidden"
-                                class="p-element font-medium text-lg cursor-pointer text-700 block lg:hidden mb-3 select-none">Accessories</a>
-                            <ul class="list-none py-0 pr-0 lg:pl-0 pl-5 m-0 text-700 hidden lg:block">
-                                <li class="hidden lg:block"><img
-                                        src="https://cdn4.vectorstock.com/i/1000x1000/23/48/black-sport-gloves-isolated-icon-simple-element-vector-28232348.jpg"
-                                        alt="Image" height="160" style="border-radius: 12px;"></li>
-                                <li class="font-bold my-5 text-xl text-900 hidden lg:block">Accessories</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Anklets</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Bracelets</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Earrings</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Necklaces</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Rings</li>
-                                <li class="mb-3 cursor-pointer hover:text-900">Wedding</li>
-                            </ul>
-                        </div>
+                        
                     </div>
                 </div>
                         
