--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,3 +1,4 @@
+<div class="body">
 <div class="signup-container">
   <h2>Sign Up</h2>
   <form (submit)="onSubmit($event)">
@@ -24,4 +25,5 @@
 
   <p>Already have an account?</p>
   <button (click)="redirectToLogin()">Go to Login</button>
+</div>
 </div>
