--- a/src/app/features/basketball/basketball.component.scss
+++ b/src/app/features/basketball/basketball.component.scss
@@ -14,7 +14,7 @@ body {
 /* Banner Section */
 .banner {
     text-align: center;
-    background-color: green;
+    background-color: orange;
     color: white;
     padding: 30px 15px;
     border-radius: 10px;
